force-app/main/default/objects/Ideas__c.object
<CustomObject>
    <description>Object to be used to track stakeholder ideas that are not ready to be cases that require actions from the Saleforce time.</description>
    <fields>
        <fullName>BA_Effort_Hours__c</fullName>
        <description>Field to allow Salesforce business analyst to track their effort on an idea.</description>
        <label>BA Effort (Hours)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BAd__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <description>Created for case 02907848</description>
        <label>BA&apos;d</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Ready for BA</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Requirements__c</fullName>
        <description>Created for case 02907848</description>
        <label>Business Requirements</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Ideas</relationshipLabel>
        <relationshipName>Ideas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effort_Type__c</fullName>
        <description>Picklist to determine the effort type required to complete an Idea.</description>
        <label>Effort Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Grooming Required</fullName>
                </value>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Bug</fullName>
                </value>
                <value>
                    <fullName>Tech Debt</fullName>
                </value>
                <value>
                    <fullName>Non Deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitting_Team__c</fullName>
        <label>Submitting Team</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Client Help Desk</fullName>
                </value>
                <value>
                    <fullName>Client Mailings</fullName>
                </value>
                <value>
                    <fullName>CSM</fullName>
                </value>
                <value>
                    <fullName>Data Quality</fullName>
                </value>
                <value>
                    <fullName>EwebOQ</fullName>
                </value>
                <value>
                    <fullName>Executives</fullName>
                </value>
                <value>
                    <fullName>Field Sales</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>HSE/Auditing</fullName>
                </value>
                <value>
                    <fullName>IPM</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Premium Support</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Registrations</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Salesforce Team</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
                <value>
                    <fullName>SDR</fullName>
                </value>
                <value>
                    <fullName>SSP</fullName>
                </value>
                <value>
                    <fullName>Supplier Leadership</fullName>
                </value>
                <value>
                    <fullName>Supplier Operations</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Vetify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <description>Created for 02907848</description>
        <label>User Story</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Ideas</label>
    <nameField>
        <label>Idea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideas</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>BA_Field_Restrictions</fullName>
        <active>true</active>
        <description>Created to restrict changes to the idea once the field &apos;BA&apos;d&apos; has been set to yes.  This restriction will prevent additional items from being added to the idea after it has already been BA&apos;d.</description>
        <errorConditionFormula>AND(
				OR(	
				ISNEW(),
				ISCHANGED(BAd__c)),
				$Profile.Id &lt;&gt; &quot;00e70000000tKSw&quot;/*System Administrator*/,
				$Profile.Id &lt;&gt; &quot;00e0g000001WNfo&quot;/*Development*/,
				OR(
								ISPICKVAL(BAd__c, &apos;Yes&apos;),
								 ISPICKVAL(PRIORVALUE(BAd__c),&apos;Yes&apos;)
								))</errorConditionFormula>
        <errorDisplayField>BAd__c</errorDisplayField>
        <errorMessage>Only the Salesforce team can BA an Idea.</errorMessage>
    </validationRules>
</CustomObject>